--- a/subjects/or500/lectures/orLec6.html
+++ b/subjects/or500/lectures/orLec6.html
@@ -80,11 +80,11 @@
                 <h2 class="section-title">Operations Research</h2>
                 <h3 class="section-desc">Lecture 6</h3>
             </div>
-            <!-- 
+
             <div class="container">
                 <div class="or500-content pt-4">
                     <h2>PDF</h2>
-                    <a href="">
+                    <a href="https://drive.google.com/file/d/1Rjz432y8llKThnODhR502CG05aIJxM6f/view?usp=share_link">
                         <button type="button" class="btn btn-danger py-3">
                             Lecture 6 PDF
                             <i class="fa-solid fa-arrow-down-long fa-bounce"></i>
@@ -94,23 +94,22 @@
                         <h2>Video</h2>
 
 
-                        <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-
-                            <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
-                                <path
-                                    d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-                            </symbol>
-                        </svg>
-
-
-                        <div class="alert alert-warning d-flex align-items-center" role="alert">
-                            <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
-                                <use xlink:href="#exclamation-triangle-fill" />
-                            </svg>
-                            <div>
-                                Not Recorded Yet
-                            </div>
-                        </div>
+                        <h1 class="mt-5">
+                            <i class="fa-solid fa-angles-right"></i>Part 1<i class="fa-solid fa-angles-left"></i>
+                        </h1>
+                        <iframe width="1349" height="480" src="https://www.youtube.com/embed/xBAVcMZZCL0"
+                            title="Operations Research OR 500 ( Assignment Problem)" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                        <!-- ============================================================ -->
+                        <h1 class="mt-5">
+                            <i class="fa-solid fa-angles-right"></i>Part 2<i class="fa-solid fa-angles-left"></i>
+                        </h1>
+                        <iframe width="1349" height="480" src="https://www.youtube.com/embed/9m2RZhWDEbA"
+                            title="Operations Research OR 500 ( Assignment Problem) Part2" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                        <!-- ============================================================ -->
 
                     </div>
 
@@ -119,7 +118,7 @@
 
 
                 </div>
-            </div> -->
+            </div>
         </div>
     </section>
     <footer class="footer mt-5 py-5">
